Changing Preview Card

--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>espiritu-de-montana-landing</title>
-  <meta name="description" content="Lovable Generated Project" />
-  <meta name="author" content="Lovable" />
+  <title>Espíritu De Montaña</title>
+  <meta name="description" content="¡Rodemos el mundo juntos!" />
+  <meta name="author" content="Espíritu de Montaña" />
 
-  <meta property="og:title" content="espiritu-de-montana-landing" />
-  <meta property="og:description" content="Lovable Generated Project" />
+  <meta property="og:title" content="Espíritu De Montaña" />
+  <meta property="og:description" content="¡Rodemos el mundo juntos!" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta property="og:image"
+    content="https://cdn.jsdelivr.net/gh/ccmoralesj/espiritu-de-montana-assets@main/assets/brand/logo-white.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@lovable_dev" />
-  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta name="twitter:image"
+    content="https://cdn.jsdelivr.net/gh/ccmoralesj/espiritu-de-montana-assets@main/assets/brand/logo-white.png" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
